src/bootstrap/bloodc/src/parser/snapshots/bloodc__parser__tests__tuple_type.snap
---
source: bloodc/src/parser/tests.rs
expression: parse_to_debug(source)
---
Program {
    module: None,
    imports: [],
    declarations: [
        Function(
            FnDecl {
                attrs: [],
                vis: Private,
                qualifiers: FnQualifiers {
                    is_const: false,
                    is_async: false,
                    is_unsafe: false,
                },
                name: Spanned {
                    node: SymbolU32 {
                        value: 1,
                    },
                    span: Span {
                        start: 3,
                        end: 4,
                        start_line: 1,
                        start_col: 4,
                    },
                },
                type_params: None,
                params: [],
                return_type: Some(
                    Type {
                        kind: Tuple(
                            [
                                Type {
                                    kind: Path(
                                        TypePath {
                                            segments: [
                                                TypePathSegment {
                                                    name: Spanned {
                                                        node: SymbolU32 {
                                                            value: 2,
                                                        },
                                                        span: Span {
                                                            start: 11,
                                                            end: 14,
                                                            start_line: 1,
                                                            start_col: 12,
                                                        },
                                                    },
                                                    args: None,
                                                },
                                            ],
                                            span: Span {
                                                start: 11,
                                                end: 14,
                                                start_line: 1,
                                                start_col: 12,
                                            },
                                        },
                                    ),
                                    span: Span {
                                        start: 11,
                                        end: 14,
                                        start_line: 1,
                                        start_col: 12,
                                    },
                                },
                                Type {
                                    kind: Path(
                                        TypePath {
                                            segments: [
                                                TypePathSegment {
                                                    name: Spanned {
                                                        node: SymbolU32 {
                                                            value: 3,
                                                        },
                                                        span: Span {
                                                            start: 16,
                                                            end: 22,
                                                            start_line: 1,
                                                            start_col: 17,
                                                        },
                                                    },
                                                    args: None,
                                                },
                                            ],
                                            span: Span {
                                                start: 16,
                                                end: 22,
                                                start_line: 1,
                                                start_col: 17,
                                            },
                                        },
                                    ),
                                    span: Span {
                                        start: 16,
                                        end: 22,
                                        start_line: 1,
                                        start_col: 17,
                                    },
                                },
                                Type {
                                    kind: Path(
                                        TypePath {
                                            segments: [
                                                TypePathSegment {
                                                    name: Spanned {
                                                        node: SymbolU32 {
                                                            value: 4,
                                                        },
                                                        span: Span {
                                                            start: 24,
                                                            end: 28,
                                                            start_line: 1,
                                                            start_col: 25,
                                                        },
                                                    },
                                                    args: None,
                                                },
                                            ],
                                            span: Span {
                                                start: 24,
                                                end: 28,
                                                start_line: 1,
                                                start_col: 25,
                                            },
                                        },
                                    ),
                                    span: Span {
                                        start: 24,
                                        end: 28,
                                        start_line: 1,
                                        start_col: 25,
                                    },
                                },
                            ],
                        ),
                        span: Span {
                            start: 10,
                            end: 29,
                            start_line: 1,
                            start_col: 11,
                        },
                    },
                ),
                effects: None,
                spec_clauses: [],
                where_clause: None,
                body: Some(
                    Block {
                        statements: [],
                        expr: Some(
                            Expr {
                                kind: Tuple(
                                    [
                                        Expr {
                                            kind: Literal(
                                                Literal {
                                                    kind: Int {
                                                        value: 1,
                                                        suffix: None,
                                                    },
                                                    span: Span {
                                                        start: 33,
                                                        end: 34,
                                                        start_line: 1,
                                                        start_col: 34,
                                                    },
                                                },
                                            ),
                                            span: Span {
                                                start: 33,
                                                end: 34,
                                                start_line: 1,
                                                start_col: 34,
                                            },
                                        },
                                        Expr {
                                            kind: Path(
                                                ExprPath {
                                                    segments: [
                                                        ExprPathSegment {
                                                            name: Spanned {
                                                                node: SymbolU32 {
                                                                    value: 5,
                                                                },
                                                                span: Span {
                                                                    start: 36,
                                                                    end: 37,
                                                                    start_line: 1,
                                                                    start_col: 37,
                                                                },
                                                            },
                                                            args: None,
                                                        },
                                                    ],
                                                    span: Span {
                                                        start: 36,
                                                        end: 37,
                                                        start_line: 1,
                                                        start_col: 37,
                                                    },
                                                },
                                            ),
                                            span: Span {
                                                start: 36,
                                                end: 37,
                                                start_line: 1,
                                                start_col: 37,
                                            },
                                        },
                                        Expr {
                                            kind: Literal(
                                                Literal {
                                                    kind: Bool(
                                                        true,
                                                    ),
                                                    span: Span {
                                                        start: 39,
                                                        end: 43,
                                                        start_line: 1,
                                                        start_col: 40,
                                                    },
                                                },
                                            ),
                                            span: Span {
                                                start: 39,
                                                end: 43,
                                                start_line: 1,
                                                start_col: 40,
                                            },
                                        },
                                    ],
                                ),
                                span: Span {
                                    start: 32,
                                    end: 44,
                                    start_line: 1,
                                    start_col: 33,
                                },
                            },
                        ),
                        span: Span {
                            start: 30,
                            end: 46,
                            start_line: 1,
                            start_col: 31,
                        },
                    },
                ),
                span: Span {
                    start: 0,
                    end: 46,
                    start_line: 1,
                    start_col: 1,
                },
            },
        ),
    ],
    span: Span {
        start: 0,
        end: 46,
        start_line: 1,
        start_col: 1,
    },
}
