src/bootstrap/bloodc/src/parser/snapshots/bloodc__parser__tests__turbofish_function.snap
---
source: bloodc/src/parser/tests.rs
expression: parse_to_debug(source)
---
Program {
    module: None,
    imports: [],
    declarations: [
        Function(
            FnDecl {
                attrs: [],
                vis: Private,
                qualifiers: FnQualifiers {
                    is_const: false,
                    is_async: false,
                    is_unsafe: false,
                },
                name: Spanned {
                    node: SymbolU32 {
                        value: 1,
                    },
                    span: Span {
                        start: 3,
                        end: 4,
                        start_line: 1,
                        start_col: 4,
                    },
                },
                type_params: None,
                params: [],
                return_type: None,
                effects: None,
                where_clause: None,
                body: Some(
                    Block {
                        statements: [],
                        expr: Some(
                            Expr {
                                kind: Call {
                                    callee: Expr {
                                        kind: Path(
                                            ExprPath {
                                                segments: [
                                                    ExprPathSegment {
                                                        name: Spanned {
                                                            node: SymbolU32 {
                                                                value: 2,
                                                            },
                                                            span: Span {
                                                                start: 9,
                                                                end: 14,
                                                                start_line: 1,
                                                                start_col: 10,
                                                            },
                                                        },
                                                        args: Some(
                                                            TypeArgs {
                                                                args: [
                                                                    Type(
                                                                        Type {
                                                                            kind: Path(
                                                                                TypePath {
                                                                                    segments: [
                                                                                        TypePathSegment {
                                                                                            name: Spanned {
                                                                                                node: SymbolU32 {
                                                                                                    value: 3,
                                                                                                },
                                                                                                span: Span {
                                                                                                    start: 17,
                                                                                                    end: 20,
                                                                                                    start_line: 1,
                                                                                                    start_col: 18,
                                                                                                },
                                                                                            },
                                                                                            args: None,
                                                                                        },
                                                                                    ],
                                                                                    span: Span {
                                                                                        start: 17,
                                                                                        end: 20,
                                                                                        start_line: 1,
                                                                                        start_col: 18,
                                                                                    },
                                                                                },
                                                                            ),
                                                                            span: Span {
                                                                                start: 17,
                                                                                end: 20,
                                                                                start_line: 1,
                                                                                start_col: 18,
                                                                            },
                                                                        },
                                                                    ),
                                                                ],
                                                                span: Span {
                                                                    start: 16,
                                                                    end: 21,
                                                                    start_line: 1,
                                                                    start_col: 17,
                                                                },
                                                            },
                                                        ),
                                                    },
                                                ],
                                                span: Span {
                                                    start: 9,
                                                    end: 21,
                                                    start_line: 1,
                                                    start_col: 10,
                                                },
                                            },
                                        ),
                                        span: Span {
                                            start: 9,
                                            end: 21,
                                            start_line: 1,
                                            start_col: 10,
                                        },
                                    },
                                    args: [
                                        CallArg {
                                            name: None,
                                            value: Expr {
                                                kind: Literal(
                                                    Literal {
                                                        kind: String(
                                                            "42",
                                                        ),
                                                        span: Span {
                                                            start: 22,
                                                            end: 26,
                                                            start_line: 1,
                                                            start_col: 23,
                                                        },
                                                    },
                                                ),
                                                span: Span {
                                                    start: 22,
                                                    end: 26,
                                                    start_line: 1,
                                                    start_col: 23,
                                                },
                                            },
                                            span: Span {
                                                start: 22,
                                                end: 26,
                                                start_line: 1,
                                                start_col: 23,
                                            },
                                        },
                                    ],
                                },
                                span: Span {
                                    start: 9,
                                    end: 27,
                                    start_line: 1,
                                    start_col: 10,
                                },
                            },
                        ),
                        span: Span {
                            start: 7,
                            end: 29,
                            start_line: 1,
                            start_col: 8,
                        },
                    },
                ),
                span: Span {
                    start: 0,
                    end: 29,
                    start_line: 1,
                    start_col: 1,
                },
            },
        ),
    ],
    span: Span {
        start: 0,
        end: 29,
        start_line: 1,
        start_col: 1,
    },
}
