src/bootstrap/bloodc/src/parser/snapshots/bloodc__parser__tests__turbofish_method.snap
---
source: bloodc/src/parser/tests.rs
expression: parse_to_debug(source)
---
Program {
    module: None,
    imports: [],
    declarations: [
        Function(
            FnDecl {
                attrs: [],
                vis: Private,
                qualifiers: FnQualifiers {
                    is_const: false,
                    is_fiber: false,
                    is_unsafe: false,
                },
                name: Spanned {
                    node: SymbolU32 {
                        value: 1,
                    },
                    span: Span {
                        start: 3,
                        end: 4,
                        start_line: 1,
                        start_col: 4,
                    },
                },
                type_params: None,
                params: [],
                return_type: None,
                effects: None,
                spec_clauses: [],
                where_clause: None,
                body: Some(
                    Block {
                        statements: [],
                        expr: Some(
                            Expr {
                                kind: MethodCall {
                                    receiver: Expr {
                                        kind: MethodCall {
                                            receiver: Expr {
                                                kind: Path(
                                                    ExprPath {
                                                        segments: [
                                                            ExprPathSegment {
                                                                name: Spanned {
                                                                    node: SymbolU32 {
                                                                        value: 2,
                                                                    },
                                                                    span: Span {
                                                                        start: 9,
                                                                        end: 12,
                                                                        start_line: 1,
                                                                        start_col: 10,
                                                                    },
                                                                },
                                                                args: None,
                                                            },
                                                        ],
                                                        span: Span {
                                                            start: 9,
                                                            end: 12,
                                                            start_line: 1,
                                                            start_col: 10,
                                                        },
                                                    },
                                                ),
                                                span: Span {
                                                    start: 9,
                                                    end: 12,
                                                    start_line: 1,
                                                    start_col: 10,
                                                },
                                            },
                                            method: Spanned {
                                                node: SymbolU32 {
                                                    value: 3,
                                                },
                                                span: Span {
                                                    start: 13,
                                                    end: 17,
                                                    start_line: 1,
                                                    start_col: 14,
                                                },
                                            },
                                            type_args: None,
                                            args: [],
                                        },
                                        span: Span {
                                            start: 9,
                                            end: 19,
                                            start_line: 1,
                                            start_col: 10,
                                        },
                                    },
                                    method: Spanned {
                                        node: SymbolU32 {
                                            value: 4,
                                        },
                                        span: Span {
                                            start: 20,
                                            end: 27,
                                            start_line: 1,
                                            start_col: 21,
                                        },
                                    },
                                    type_args: Some(
                                        TypeArgs {
                                            args: [
                                                Type(
                                                    Type {
                                                        kind: Path(
                                                            TypePath {
                                                                segments: [
                                                                    TypePathSegment {
                                                                        name: Spanned {
                                                                            node: SymbolU32 {
                                                                                value: 5,
                                                                            },
                                                                            span: Span {
                                                                                start: 30,
                                                                                end: 33,
                                                                                start_line: 1,
                                                                                start_col: 31,
                                                                            },
                                                                        },
                                                                        args: Some(
                                                                            TypeArgs {
                                                                                args: [
                                                                                    Type(
                                                                                        Type {
                                                                                            kind: Infer,
                                                                                            span: Span {
                                                                                                start: 34,
                                                                                                end: 35,
                                                                                                start_line: 1,
                                                                                                start_col: 35,
                                                                                            },
                                                                                        },
                                                                                    ),
                                                                                ],
                                                                                span: Span {
                                                                                    start: 33,
                                                                                    end: 36,
                                                                                    start_line: 1,
                                                                                    start_col: 34,
                                                                                },
                                                                            },
                                                                        ),
                                                                    },
                                                                ],
                                                                span: Span {
                                                                    start: 30,
                                                                    end: 36,
                                                                    start_line: 1,
                                                                    start_col: 31,
                                                                },
                                                            },
                                                        ),
                                                        span: Span {
                                                            start: 30,
                                                            end: 36,
                                                            start_line: 1,
                                                            start_col: 31,
                                                        },
                                                    },
                                                ),
                                            ],
                                            span: Span {
                                                start: 29,
                                                end: 37,
                                                start_line: 1,
                                                start_col: 30,
                                            },
                                        },
                                    ),
                                    args: [],
                                },
                                span: Span {
                                    start: 9,
                                    end: 39,
                                    start_line: 1,
                                    start_col: 10,
                                },
                            },
                        ),
                        span: Span {
                            start: 7,
                            end: 41,
                            start_line: 1,
                            start_col: 8,
                        },
                    },
                ),
                span: Span {
                    start: 0,
                    end: 41,
                    start_line: 1,
                    start_col: 1,
                },
            },
        ),
    ],
    span: Span {
        start: 0,
        end: 41,
        start_line: 1,
        start_col: 1,
    },
}
